@@ -1,3 +1,8 @@
+2013-10-28  Carl Hetherington  <cth@carlh.net>
+
+	* Fix failure to reload configuration on
+	some non-English locales.
+
 2013-10-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.23 released.
